--- a/Assignments/Arul Jyothi/Assignment 3/bucket.html
+++ b/Assignments/Arul Jyothi/Assignment 3/bucket.html
@@ -12,9 +12,9 @@
     <div class="ImgSlider"></div>
     <script>
   window.watsonAssistantChatOptions = {
-    integrationID: "2a86d786-dca4-4b50-bb03-b7ee02e00340", // The ID of this integration.
-    region: "us-south", // The region your integration is hosted in.
-    serviceInstanceID: "c1f088b7-4c6b-44c0-98e9-4d2c346fef59", // The ID of your service instance.
+    integrationID: "5f3f14df-01ee-42b1-8ca5-04b439d19d8b", // The ID of this integration.
+    region: "jp-tok", // The region your integration is hosted in.
+    serviceInstanceID: "a2092425-d6b8-41a1-98cf-11b497e17295", // The ID of your service instance.
     onLoad: function(instance) { instance.render(); }
   };
   setTimeout(function(){
